simple-mvc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: rich77926/simple-mvc:v1
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred
