simple-mvc/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: rich77926/simple-mvc:v1
    resources:
      limits:
        memory: "64Mi"
        cpu: "200m"
    ports:
      - containerPort: 80
  imagePullSecrets:
    - name: regcred
